--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,10 @@
 	"name":"akiyatkin/catkit",
 	"require":{
 		"infrajs/cart":"~1"
+	},
+	"autoload": {
+		"psr-4":{
+	 		"akiyatkin\\catkit\\": ""
+		}
 	}
 }
